adjust subtext lineheight to align with hero. add full stop at end of subtext for easier reading

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -266,6 +266,7 @@ footer {
 }
 
 .above-the-fold>.inner {
-    max-width: 950px;
+    max-width: 550px;
     margin: 0 auto;
+    line-height: 1.8rem;
 }
